fix: viewport height-related issue on mobile

--- a/packages/web/src/stylesheets/_main.scss
+++ b/packages/web/src/stylesheets/_main.scss
@@ -35,8 +35,6 @@
   @media screen and (max-width: 768px) {
     --sn-stylekit-font-size-editor: 1rem;
   }
-
-  --viewport-height: 100vh;
 }
 
 html {
